--- a/app/src/main/res/layout/user_activity_main.xml
+++ b/app/src/main/res/layout/user_activity_main.xml
@@ -28,7 +28,7 @@
             tools:ignore="DisableBaselineAlignment">
 
 
-            <RelativeLayout
+            <!--<RelativeLayout
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="0.25"
@@ -69,7 +69,7 @@
                         android:visibility="gone"
                         tools:ignore="ObsoleteLayoutParam" />
                 </LinearLayout>
-            </RelativeLayout>
+            </RelativeLayout>-->
 
             <RelativeLayout
                 android:layout_width="0dp"
