--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -74,7 +74,7 @@
                                 android:layout_width="fill_parent"
                                 android:layout_height="wrap_content"
                                 android:hint="@string/reg_email"
-                                android:text="c@c.com"
+                                android:text="a@a.com"
                                 android:inputType="text" />
                         </android.support.design.widget.TextInputLayout>
 
@@ -138,6 +138,7 @@
                             android:text=" ورود کاربر"
                             android:textAllCaps="false"
                             android:textColor="@color/white"
+                            android:visibility="gone"
                             android:textSize="18sp" />
                     </LinearLayout>
 
