--- a/app/src/main/res/layout/user_fragment_sendfile.xml
+++ b/app/src/main/res/layout/user_fragment_sendfile.xml
@@ -11,8 +11,8 @@
 
     <ImageView
         android:id="@+id/viewImage"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="250dp"
+        android:layout_height="300dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:src="@drawable/loading" />
@@ -55,12 +55,13 @@
                     android:layout_margin="20dp"
                     android:layout_weight="1"
                     android:tint="@color/gray"
+                    android:visibility="gone"
                     app:srcCompat="@mipmap/ic_file" />
 
                 <ImageView
                     android:id="@+id/img_gallrty_sendfile"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:layout_margin="20dp"
                     android:layout_weight="1"
                     android:tint="@color/gray"
@@ -68,8 +69,8 @@
 
                 <ImageView
                     android:id="@+id/img_camera_sendfile"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:layout_margin="20dp"
                     android:layout_weight="1"
                     app:srcCompat="@android:drawable/ic_menu_camera" />
